; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ecryptfs/extr_crypto.c_ecryptfs_set_default_sizes.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ecryptfs/extr_crypto.c_ecryptfs_set_default_sizes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecryptfs_crypt_stat = type { i32, i64, i32, i32 }

@ECRYPTFS_DEFAULT_EXTENT_SIZE = common dso_local global i32 0, align 4
@ECRYPTFS_DEFAULT_IV_BYTES = common dso_local global i32 0, align 4
@ECRYPTFS_METADATA_IN_XATTR = common dso_local global i32 0, align 4
@PAGE_CACHE_SIZE = common dso_local global i64 0, align 8
@ECRYPTFS_MINIMUM_HEADER_EXTENT_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ecryptfs_set_default_sizes(%struct.ecryptfs_crypt_stat* %0) #0 {
  %2 = alloca %struct.ecryptfs_crypt_stat*, align 8
  store %struct.ecryptfs_crypt_stat* %0, %struct.ecryptfs_crypt_stat** %2, align 8
  %3 = load i32, i32* @ECRYPTFS_DEFAULT_EXTENT_SIZE, align 4
  %4 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %2, align 8
  %5 = getelementptr inbounds %struct.ecryptfs_crypt_stat, %struct.ecryptfs_crypt_stat* %4, i32 0, i32 3
  store i32 %3, i32* %5, align 4
  %6 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %2, align 8
  %7 = call i32 @set_extent_mask_and_shift(%struct.ecryptfs_crypt_stat* %6)
  %8 = load i32, i32* @ECRYPTFS_DEFAULT_IV_BYTES, align 4
  %9 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %2, align 8
  %10 = getelementptr inbounds %struct.ecryptfs_crypt_stat, %struct.ecryptfs_crypt_stat* %9, i32 0, i32 2
  store i32 %8, i32* %10, align 8
  %11 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %2, align 8
  %12 = getelementptr inbounds %struct.ecryptfs_crypt_stat, %struct.ecryptfs_crypt_stat* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @ECRYPTFS_METADATA_IN_XATTR, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %1
  %18 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %2, align 8
  %19 = getelementptr inbounds %struct.ecryptfs_crypt_stat, %struct.ecryptfs_crypt_stat* %18, i32 0, i32 1
  store i64 0, i64* %19, align 8
  br label %33

20:                                               ; preds = %1
  %21 = load i64, i64* @PAGE_CACHE_SIZE, align 8
  %22 = load i64, i64* @ECRYPTFS_MINIMUM_HEADER_EXTENT_SIZE, align 8
  %23 = icmp sle i64 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %20
  %25 = load i64, i64* @ECRYPTFS_MINIMUM_HEADER_EXTENT_SIZE, align 8
  %26 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %2, align 8
  %27 = getelementptr inbounds %struct.ecryptfs_crypt_stat, %struct.ecryptfs_crypt_stat* %26, i32 0, i32 1
  store i64 %25, i64* %27, align 8
  br label %32

28:                                               ; preds = %20
  %29 = load i64, i64* @PAGE_CACHE_SIZE, align 8
  %30 = load %struct.ecryptfs_crypt_stat*, %struct.ecryptfs_crypt_stat** %2, align 8
  %31 = getelementptr inbounds %struct.ecryptfs_crypt_stat, %struct.ecryptfs_crypt_stat* %30, i32 0, i32 1
  store i64 %29, i64* %31, align 8
  br label %32

32:                                               ; preds = %28, %24
  br label %33

33:                                               ; preds = %32, %17
  ret void
}

declare dso_local i32 @set_extent_mask_and_shift(%struct.ecryptfs_crypt_stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
